# CC-api-switch

./: .gitignore  README.md  build.sh  dev.sh  index.html  launch.sh  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs
